# aiida-quantumespresso-hp

./: .gitignore  .pre-commit-config.yaml  .prospector.yaml  .pylintrc  .readthedocs.yml  CHANGELOG.md  LICENSE  LICENSE.txt  MANIFEST.in  README.md  codecov.yaml  environment.yml  pyproject.toml  setup.json  setup.py  todo.md
.ci/: validate_version_number.py
.cla/version1/: signatures.json
.github/config/: code-hp.yaml  code-pw.yaml  localhost-config.yaml  localhost-setup.yaml  profile.yaml
.github/workflows/: cd.yml  ci.yml  cla.yml  update_changelog.py  validate_release_tag.py
aiida_quantumespresso_hp/: __init__.py
aiida_quantumespresso_hp/calculations/: hp.py
aiida_quantumespresso_hp/calculations/functions/: collect_atomic_calculations.py  create_hubbard_v_from_distance.py  structure_relabel_kinds.py  structure_reorder_kinds.py
aiida_quantumespresso_hp/cli/: __init__.py
aiida_quantumespresso_hp/cli/calculations/: hp.py
aiida_quantumespresso_hp/cli/workflows/: __init__.py  hubbard.py
aiida_quantumespresso_hp/cli/workflows/hp/: base.py  main.py
aiida_quantumespresso_hp/parsers/: hp.py
aiida_quantumespresso_hp/utils/: validation.py
aiida_quantumespresso_hp/workflows/: hubbard.py  hubbardV.py  workfunctions.py
aiida_quantumespresso_hp/workflows/hp/: base.py  main.py  parallelize_atoms.py
aiida_quantumespresso_hp/workflows/protocols/: hubbard.yaml  hubbard_u.yaml
aiida_quantumespresso_hp/workflows/protocols/hp/: main.yaml  parallelize_atoms.yaml
aiida_quantumespresso_uscf/calculations/: uscf.py
aiida_quantumespresso_uscf/parsers/: uscf.py
aiida_quantumespresso_uscf/workflows/uscf/: base.py  main.py  parallelize_atoms.py
aiida_uscf/calculations/: uscf.py
docs/source/: 1_computing_hubbard.ipynb  2_parallel_hubbard.ipynb  3_self_consistent.ipynb  citeus.md  conf.py  index.md
docs/source/howto/: analyze.md  index.md  understand.md
docs/source/howto/calculations/: hp.md  index.md
docs/source/howto/workflows/: hubbard.md  index.md
docs/source/howto/workflows/hp/: base.md  main.md  parallelize_atoms.md  parallelize_qpoints.md
docs/source/installation/: index.md
docs/source/local_module/: temp_profile.py
docs/source/reference/: index.md
docs/source/topics/: index.md
docs/source/topics/calculations/: hp.md  index.md
docs/source/topics/workflows/: hubbard.md  index.md
docs/source/topics/workflows/hp/: base.md  main.md  parallelize_atoms.md  parallelize_qpoints.md
docs/source/tutorials/: index.md
examples/: example_sc_hubbard.py
src/aiida_hubbard/: __init__.py
src/aiida_hubbard/calculations/: hp.py
src/aiida_hubbard/calculations/functions/: structure_reorder_kinds.py
src/aiida_hubbard/cli/: __init__.py
src/aiida_hubbard/cli/calculations/: __init__.py  hp.py
src/aiida_hubbard/cli/workflows/: __init__.py
src/aiida_hubbard/parsers/: hp.py
src/aiida_hubbard/parsers/parse_raw/: hp.py
src/aiida_hubbard/workflows/: hubbard.py
src/aiida_hubbard/workflows/hp/: parallelize_atoms.py  parallelize_qpoints.py
src/aiida_hubbard/workflows/protocols/hp/: base.yaml  main.yaml
src/aiida_quantumespresso_hp/calculations/: hp.py
src/aiida_quantumespresso_hp/calculations/functions/: structure_relabel_kinds.py  structure_reorder_kinds.py
src/aiida_quantumespresso_hp/cli/: __init__.py
src/aiida_quantumespresso_hp/cli/calculations/: hp.py
src/aiida_quantumespresso_hp/cli/workflows/: hubbard.py
src/aiida_quantumespresso_hp/cli/workflows/hp/: base.py  main.py
src/aiida_quantumespresso_hp/parsers/: __init__.py  hp.py
src/aiida_quantumespresso_hp/parsers/parse_raw/: hp.py
src/aiida_quantumespresso_hp/utils/: general.py
src/aiida_quantumespresso_hp/workflows/: hubbard.py
src/aiida_quantumespresso_hp/workflows/hp/: base.py  main.py  parallelize_atoms.py  parallelize_qpoints.py
src/aiida_quantumespresso_hp/workflows/protocols/: hubbard.yaml
src/aiida_quantumespresso_hp/workflows/protocols/hp/: base.yaml
tests/: conftest.py  pytest.ini
tests/calculations/: test_autoinvalidate_cache.py  test_example01.py  test_hp.py  test_pw.py
tests/calculations/functions/: test_collect_atomic_calculations.py  test_structure_relabel.py
tests/calculations/test_hp/: test_collect.in  test_default.in
tests/cli/: test_commands.py
tests/fixtures/pseudos/: Co.upf  Li.upf  O.upf
tests/parsers/: test_hp.py
tests/parsers/fixtures/hp/default/: aiida.in  aiida.out
tests/parsers/fixtures/hp/default_hubbard_structure/: aiida.out
tests/parsers/fixtures/hp/failed_computing_cholesky/: aiida.out
tests/parsers/fixtures/hp/failed_fermi_shift/: aiida.in  aiida.out
tests/parsers/fixtures/hp/failed_incompatible_fft_grid/: aiida.out
tests/parsers/fixtures/hp/failed_invalid_namelist/: aiida.out
tests/parsers/fixtures/hp/failed_missing_chi_matrices/: aiida.out
tests/parsers/fixtures/hp/failed_no_hubbard_parameters/: aiida.out
tests/parsers/fixtures/hp/failed_out_of_walltime/: aiida.out
tests/parsers/fixtures/hp/failed_stdout_incomplete/: aiida.out
tests/parsers/fixtures/hp/initialization_only/: aiida.out
tests/parsers/fixtures/hp/initialization_only_intersites/: aiida.in  aiida.out
tests/parsers/fixtures/hp/initialization_only_mesh/: aiida.in  aiida.out
tests/parsers/test_hp/: test_hp_default.yml  test_hp_default_hubbard_structure.yml  test_hp_initialization_only.yml  test_hp_initialization_only_intersites.yml  test_hp_initialization_only_mesh.yml  test_hp_initialization_only_mesh_more_points.yml  test_hp_voronoi_hubbard_structure_False_.yml  test_hp_voronoi_hubbard_structure_True_.yml
tests/utils/: test_general.py  test_validation.py
tests/workflows/: base.py  main.py  parallelize_atoms.py  test_hubbard.py
tests/workflows/hp/: test_base.py  test_main.py  test_parallelize_atoms.py  test_parallelize_qpoints.py
tests/workflows/protocols/: test_hubbard.py
tests/workflows/protocols/hp/: test_base.py  test_main.py
tests/workflows/protocols/test_hubbard/: test_default.yml
tests/workflows/uscf/: base.py  parallelize_atoms.py
utils/: fastentrypoints.py
(+4 files in other folders)
